--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,4 +2,5 @@ link_directories(${CMAKE_BINARY_DIR})
 link_libraries(tinyRPC pthread)
 
 add_executable(test_accept test_accept.cc)
+add_executable(test_crc test_crc.cc)
 
