--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,10 @@ add_library(${PROJECT_NAME}
         src/server/server.cc
         src/server/session.cc
         src/rpc/abstract_codec.cc
+        src/rpc/abstract_codec.cc
+        src/rpc/router.cc
         src/rpc/codec.cc
+        src/rpc/error.cc
         src/rpc/controller.cc
         src/client/client.cc
         src/client/channel.cc)
