--- a/example/calculate/CMakeLists.txt
+++ b/example/calculate/CMakeLists.txt
@@ -2,4 +2,4 @@ link_directories(${CMAKE_BINARY_DIR})
 link_libraries(${LIBS})
 
 add_executable(client calculate_client.cc calculate_service.pb.cc)
-add_executable(server calculate_server calculate_service.pb.cc)
+add_executable(server calculate_server.cc calculate_service.pb.cc)
