--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,4 +48,5 @@ include_directories(${CMAKE_BINARY_DIR})
 add_subdirectory(plugin)
 add_subdirectory(test)
 add_subdirectory(example/calculate)
+add_subdirectory(example/http)
 add_subdirectory(benchmark)
