--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,4 +1,5 @@
-link_directories(${CMAKE_BINARY_DIR})
 link_libraries(${LIBS})
 
 add_executable(bench bench.cc calculate_service.pb.cc)
+
+target_include_directories(bench PRIVATE ${THIRD_PARTY_DIR}/asio)
