feat: implementing etcd service discovery

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set(JSON_Install OFF CACHE INTERNAL "")
 set(THIRD_PARTY_DIR ${CMAKE_SOURCE_DIR}/third_party)
 
 add_subdirectory(${THIRD_PARTY_DIR}/json-3.11.3)
+add_subdirectory(${THIRD_PARTY_DIR}/b64.c)
 
 add_custom_command(OUTPUT
         ${CMAKE_SOURCE_DIR}/tinyRPC/api/http_rule.pb.h
@@ -43,6 +44,9 @@ add_library(${PROJECT_NAME}
         src/rpc/error.cc
         src/rpc/controller.cc
         src/rpc/message.cc
+        src/registry/etcd_def.cc
+        src/registry/etcd.cc
+        src/registry/registry.cc
         src/client/client.cc
         src/client/channel.cc
         ${CMAKE_SOURCE_DIR}/tinyRPC/api/http_rule.pb.cc)
@@ -54,7 +58,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE
         ${THIRD_PARTY_DIR}
         ${THIRD_PARTY_DIR}/asio)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json b64c)
 
 set(LIBS ${PROJECT_NAME} ${Protobuf_LIBRARY} pthread uuid)
 
