--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,4 +3,5 @@ link_libraries(${LIBS})
 
 add_executable(test_codec test_codec.cc)
 add_executable(test_threadpool test_threadpool.cc)
+add_executable(test_etcd test_etcd.cc)
 
