--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,5 +3,6 @@ link_libraries(${LIBS})
 
 add_executable(test_codec test_codec.cc)
 add_executable(test_threadpool test_threadpool.cc)
-add_executable(test_etcd test_etcd.cc)
+add_executable(test_etcd_watch test_etcd_watch.cc)
+add_executable(test_etcd_put test_etcd_put.cc)
 
