feat: implement load balance strategies

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(test_threadpool test_threadpool.cc)
 add_executable(test_etcd_watch test_etcd_watch.cc)
 add_executable(test_etcd_put test_etcd_put.cc)
 
-add_executable(test_getifaddr test_getifaddr.cc)
+add_executable(test_consistant_hash test_consistant_hash.cc)
